--- a/API-Gateway/src/main/resources/application.yml
+++ b/API-Gateway/src/main/resources/application.yml
@@ -11,16 +11,21 @@ spring:
           - id: user-auth
             uri: lb://user-service
             predicates:
-              - Path=/api/auth/**
+              - Path=/auth/**
           - id: user-admin
             uri: lb://user-service
             predicates:
-              - Path=/api/admin/**
+              - Path=/admin/**
           - id: user-profile
             uri: lb://user-service
             predicates:
-              - Path=/api/user/**
+              - Path=/user/**
           - id: song-service
             uri: http://localhost:8082
             predicates:
-              - Path=/api/songs/**
+              - Path=/api/song/**
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
