--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - harmonique-network
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
     restart: on-failure
 
   eureka-server:
@@ -43,6 +45,25 @@ services:
       SPRING_DATASOURCE_PASSWORD: harmonique_pass
     ports:
       - "8081:8081"
+    networks:
+      - harmonique-network
+    restart: on-failure
+
+  song-service:
+    build:
+      context: ./SongService
+    image: harmonique-song-service
+    container_name: song-service-container
+    depends_on:
+      - mysql
+      - eureka-server
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/harmonique_songservice
+      SPRING_DATASOURCE_USERNAME: harmonique_user
+      SPRING_DATASOURCE_PASSWORD: harmonique_pass
+    ports:
+      - "8082:8082"
     networks:
       - harmonique-network
     restart: on-failure
