--- a/API-Gateway/src/main/resources/application.yml
+++ b/API-Gateway/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
             uri: lb://user-service
             predicates:
               - Path=/api/user/**
+          - id: user-static-files
+            uri: http://localhost:8081
+            predicates:
+              - Path=/profilepic/**
           - id: song-service
             uri: http://localhost:8082
             predicates:
