--- a/UserService/src/main/resources/application-local.yml
+++ b/UserService/src/main/resources/application-local.yml
@@ -1,13 +1,14 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/harmonique_userservice
-    username: root
-    password: root
+    username: vedant
+    password: casestudy
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
     properties:
       hibernate:
         format_sql: true
